force-app/main/default/objects/Account/fields/new_31_1_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>new_31_1_Pipeline__c</fullName>
    <label>new_31_1_Pipeline</label>
    <length>23</length>
    <type>Text</type>
</CustomField>