force-app/main/default/objects/Account/fields/phd__c.field-meta.xml
<CustomField>
    <fullName>phd__c</fullName>
    <label>phd</label>
    <length>33</length>
    <type>Text</type>
</CustomField>