force-app/main/default/objects/Account/fields/pipleline__c.field-meta.xml
<CustomField>
    <fullName>pipleline__c</fullName>
    <label>pipleline</label>
    <length>23</length>
    <type>Text</type>
</CustomField>