force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <description>yes it will</description>
    <label>test</label>
    <length>234</length>
    <type>Text</type>
</CustomField>