force-app/main/default/objects/Account/fields/Training_veno__c.field-meta.xml
<CustomField>
    <fullName>Training_veno__c</fullName>
    <label>Training_veno</label>
    <length>23</length>
    <type>Text</type>
</CustomField>