force-app/main/default/objects/Account/fields/Veno_training__c.field-meta.xml
<CustomField>
    <fullName>Veno_training__c</fullName>
    <label>Veno_training</label>
    <length>33</length>
    <type>Text</type>
</CustomField>